		Removed indirect file support as is unneeded for 64-bit.
		Removed obsolete CVS modification log comments.
		Handle vcd saver case of dot at end of signal name.
3.3.23	01jul11	Fixed ItemFactory callbacks as their argument lists did
		not reflect the correct callback argument type/order
		for callback_type=1.  This is a longstanding hidden
		bug.  (Would prevent pattern search from working on
		64-bit big-endian architectures.)
		Fixed broken "replace" signal option.
3.3.24	03aug11	Improve the searching for the TCL libraries (when using 
		stubs).
		Fixed bug where Tcl_GetString was substituted with
		brace removal preprocessing when unnecessary (would break
		addSignalsFromList, etc.)
3.3.25	15sep11	Replaced calloc_2 with histent_calloc in loaders where
		applicable.
		Updated tcl.m4 so /usr/lib64 can be automatically used.
		Fixed TR_ANALOG_STEP line clipping problem.
		Checked in fix for modelsim signal bit nets that are
		defined as [0] as some tools emit signals without the
		[0] and it causes savefile compatibility problems.
		Add visible filter pattern in fileselbox() as well as
		selectable "*" pattern overrides.
		Added custom filters to GtkFileChooser dialogue.
		Fix in lxt2_read.c/.h for negative msb/lsb indices.
		Fix in vzt_read.c/.h for negative msb/lsb indices.
3.3.26	25sep11	Mac OSX fixes: removed restrictions for twinwave on OSX,
		OSX compile fixes for Tcl detection, printf warning 
		fixes (xcode gcc uses stricter warnings).
		More generic warning fixes from recent feature adds.
3.3.27	20oct11	Fixes of suspicious NULL pointer warnings from scan-build.
		Fixed inline function linker errors when using Clang.
		Optimization of more [1] cases found in analyzer.h when
		-DWAVE_USE_STRUCT_PACKING is active.
		In process_url_list() use g_malloc/g_free as context can
		or will change when files are loaded.
		Added fix for DnD crash when Quartz is the GDK back-end
		on Mac OSX.  Enable fix with --enable-quartz in configure.